[SIX-197] Fixed cropped email address on the landscape device

--- a/wp-content/themes/sixgill/css/custom/custom_resolutions.css
+++ b/wp-content/themes/sixgill/css/custom/custom_resolutions.css
@@ -110,4 +110,8 @@
         margin-bottom: 10px;
         height: 35px;
     }
+    
+    .subscribe-block-tablet-mobile {
+        padding: 40px 25px 20px 30px;
+    }
 }
